--- a/.github/workflows/main_rainfallpredictionaiht.yml
+++ b/.github/workflows/main_rainfallpredictionaiht.yml
@@ -62,15 +62,15 @@ jobs:
         run: unzip release.zip
 
       
-      - name: Login to Azure
-        uses: azure/login@v1
+      - name: Login to Render
+        uses: render/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_E5A123C53019483783F5887CA0D5ECB4 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_1036151E7E304B3A8B6B4E9B85827A1D }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_935C720C85994D91A8BC267405B79254 }}
+          client-id: ${{ secrets.RENDERAPPSERVICE_CLIENTID_E5A123C53019483783F5887CA0D5ECB4 }}
+          tenant-id: ${{ secrets.RENDERAPPSERVICE_TENANTID_1036151E7E304B3A8B6B4E9B85827A1D }}
+          subscription-id: ${{ secrets.RENDERAPPSERVICE_SUBSCRIPTIONID_935C720C85994D91A8BC267405B79254 }}
 
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v2
+      - name: 'Deploy to Render Web App'
+        uses: render/webapps-deploy@v2
         id: deploy-to-webapp
         with:
           app-name: 'RainfallPredictionAiht'
